@@ -1,5 +1,0 @@
-README.rdoc
-lib/**/*.rb
-bin/*
-features/**/*.feature
-MIT-LICENSE
