@@ -1,14 +1,4 @@
-source :rubygems
+source "http://rubygems.org"
 
-gem "activerecord"
-
-group :development, :test do
-  gem "jeweler", "~> 1.5"
-  gem "rspec", '~> 1.3'
-  gem "pg"
-  gem "mysql"
-  gem "mysql2"
-  gem "sqlite3-ruby", "~> 1.3.1"
-end
-
+gemspec
 # vim: ft=ruby
