@@ -1,0 +1,3 @@
+module RedhillonrailsCore
+  VERSION = "1.1.3"
+end
